<resources>
    <string name="app_name">Quick Math</string>
    <string name="help">Help</string>
    <string name="play">Play</string>
    <string name="high_scores">High scores</string>
    <string name="quick_nmath">Quick\nMath</string>
    <string name="pause_menu">Pause menu</string>
    <string name="continuee">Continue</string>
    <string name="menu">Menu</string>
    <string name="next_level">Next level</string>
    <string name="end_game">End game</string>
    <string name="curent_score">Curent score:</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="submit_your_score">Submit your score</string>
    <string name="test_enter_high_score">(test)Enter high score</string>
    <string name="enter_hs_t">Enter HS(t)</string>
    <string name="enter_your_score">Enter your score</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="share_your_score">Share your score</string>
    <string name="rapid_math_score_table">Rapid Math Score Table</string>
    <string name="user_score">User: score</string>
    <string name="score_table">Score table</string>
</resources>